# sw_second_part

./: .gitignore  CMakeLists.txt  README.md  Singularity.def  build.sh  ci_backup.yml  convert_ppm.py  job.sh  job_script.slurm  random_gen_images.py  readme.md  symmetric_1.ppm  symmetric_2.ppm
.github/workflows/: .ci.yml.swp  ci.yml
include/: image_processing.hpp
input/: symmetric_3.ppm
src/: image_processing.cpp  main.cpp
test/: test_image_processing.cpp
